<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:width="200dp"
        android:saveEnabled="false"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_text"
        android:text="@string/button_text"
        android:onClick="onClickEvent" />

    <Button
        android:id="@+id/another_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_two"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button"
        android:onClick="onClickAnotherEvent"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/another_button"
        android:id="@+id/space"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_get_intent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/space"
        android:text="@string/button_send"
        android:onClick="onClickIntentEvent"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_maps"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_get_intent"
        android:text="@string/button_maps"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_calls"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_maps"
        android:text="@string/button_calls"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_browse"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_calls"
        android:text="@string/button_browse"/>

</RelativeLayout>